# AntColonyOptimization

./: README.txt
Source_code/: CMakeLists.txt
Source_code/cmake/: FindCplex.cmake
Source_code/src/: main.cpp
Source_code/src/Instance Generators/: boardGenerator.cpp  boardGenerator.h  figureGenerator.cpp  figureGenerator.h
Source_code/src/Solvers/: TSPSolver.cpp  TSPSolver.h  cpxmacro.h  solverManager.cpp  solverManager.h
Source_code/src/Solvers/Ant Colony System/: ACSHeuristic.cpp  ACSHeuristic.h  Ant.cpp  Ant.h
Source_code/src/Utilities/: plotter.py  typesAndDefs.h  unitTest.cpp  unitTest.h  utils.cpp  utils.h
